fix: add prohibition of word wrapping in menu items

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -32,6 +32,7 @@
     transition: color $animation;
     user-select: none;
     text-align: center;
+    white-space: nowrap;
 
     @include mouse-hover {
       color: $cl-red;
